--- a/Proyecto_Mood_Sense/package.json
+++ b/Proyecto_Mood_Sense/package.json
@@ -14,12 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "@supabase/supabase-js": "^2.48.1",
+    "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^7.1.3",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
