--- a/Proyecto_Mood_Sense/package.json
+++ b/Proyecto_Mood_Sense/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "dependencies": {  
+    "@mui/icons-material": "^5.x.x",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
