--- a/Proyecto_Mood_Sense/package.json
+++ b/Proyecto_Mood_Sense/package.json
@@ -15,10 +15,12 @@
     "@mui/material": "^6.4.1",
     "@supabase/supabase-js": "^2.48.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.15.10",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
