--- a/Proyecto_Mood_Sense/package.json
+++ b/Proyecto_Mood_Sense/package.json
@@ -9,17 +9,20 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {  
-    "@mui/icons-material": "^5.x.x",
+  "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@supabase/supabase-js": "^2.48.1",
+    "chart.js": "^4.4.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.0",
     "sweetalert2": "^11.15.10",
     "uuid": "^11.0.5"
   },
