--- a/Proyecto_Mood_Sense/package.json
+++ b/Proyecto_Mood_Sense/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@supabase/supabase-js": "^2.48.1",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "chart.js": "^4.4.7",
     "emailjs-com": "^3.2.0",
     "js-cookie": "^3.0.5",
@@ -22,12 +23,14 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
     "sweetalert2": "^11.15.10",
+    "tailwindcss": "^4.0.2",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -35,11 +38,13 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "postcss": "^8.5.1",
     "vite": "^6.0.5"
   }
 }
